[tool.poetry]
name = "msds-432"
version = "0.1.0"
description = ""
authors = ["Jason Adam <22adamj22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
matplotlib = "^3.1.2"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
blackcellmagic = "^0.0.2"
ipykernel = "^5.1.3"
jupyter_contrib_nbextensions = "^0.5.1"
pylint = "^2.5.3"
flake8 = "^3.8.3"
bandit = "^1.6.2"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
